--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,13 @@ Package: Rprojects
 Type: Package
 Title: Some solutions to the Maximum subarray problem
 Version: 1.0
-Date: 2020-10-08
+Date: 2021-01-19
 Author: Maxime GRANDVAUX, Guillaume SHI DE MILLEVILLE, Sidiya BABAH
-Maintainer: Maxime GRANDVAUX, Guillaume SHI DE MILLEVILLE
+Maintainer: Maxime GRANDVAUX <maximeegg@hotmail.fr>
 Description: This package contains some solutions to the Maximum subarray problem implemented in both R and C++. 
-The aim is to compare the speed of interpreted and compiled language.
-A first naive solution was implemented in both langagues, then compared to more advanced algorithms like Kadane's algorithm.
-Examples are included with the time needed to compute these algorithms on a given dataset.
+   The aim is to compare the speed of interpreted and compiled language.
+   A first naive solution was implemented in both langagues, then compared to more advanced algorithms like Kadane's algorithm.
+   Examples are included with the time needed to compute these algorithms on a given dataset.
 License: GPL (>= 2)
 Imports: Rcpp (>= 1.0.5)
 LinkingTo: Rcpp
